# FastForward

./: .gitignore  LICENSE.txt  README.md  install.sh
artifact/benchmark/petrinizer/petrinizer-master/: .gitignore  .gitlab-ci.yml  Makefile  README.md  slapnet.cabal
dependencies/lola/: ChangeLog  Makefile  Makefile.am  Makefile.in  NEWS  README  aclocal.m4  config.status  configure  configure.ac
dependencies/lola/doc/: Doxydetails  Doxydetails.in  Doxyfile  Doxyfile.in  Makefile  Makefile.am  Makefile.in  lola.info  lola.man  lola.texi  stamp-vti
dependencies/lola/doc/grammars/: formula.ebnf  formula.html  formula.xhtml  net.ebnf  net.html  net.xhtml
dependencies/lola/doc/outputs/: output1.txt  output10.txt  output11.txt  output12.txt  output13.txt  output14.txt  output15.txt  output16.txt  output17.txt  output18.txt  output19.txt  output2.txt  output3.txt  output4.txt  output5.txt  output6.txt  output7.txt  output8.txt  output9.txt  update.sh
dependencies/lola/examples/data/: data-100x100.lola  data-10x10.lola  data-20x20.lola  data-50x50.lola  data.hllola  read-mutex-10.formula  read-mutex-100.formula  read-mutex-20.formula  read-mutex-50.formula  rw-mutex-10.formula  rw-mutex-100.formula  rw-mutex-20.formula  rw-mutex-50.formula
dependencies/lola/examples/mutex/: mutex.hllola  mutex.lola  mutex_leadsto.formula  mutex_liveness.formula  mutex_safety.formula  mutex_unfair.lola
dependencies/lola/examples/phils/: phils.lola  phils10.lola
dependencies/lola/examples/planner/: planner.hllola  planner.lola  planner.pddl  planner_boundedness.formula  planner_query.formula  planner_simultaneous.formula
dependencies/lola/examples/vasy/: vasy.lola
dependencies/lola/m4/: Makefile.src  Makefile.tests
dependencies/lola/src/: Makefile  Makefile.am  Makefile.in  cmdline.c  cmdline.ggo  cmdline.h  config.h  config.h.in  lola
dependencies/lola/src/.deps/: cmdline.Po
dependencies/lola/src/Core/: Dimensions.h  Handlers.cc  Handlers.h  Runtime.cc  Runtime.h  main.cc
dependencies/lola/src/CoverGraph/: CoverGraph.cc  CoverGraph.h  CoverPayload.h
dependencies/lola/src/Exploration/: AutomataTree.cc  AutomataTree.h  CTLExploration.cc  CTLExploration.h  ChooseTransition.h  ChooseTransitionHashDriven.cc  ChooseTransitionHashDriven.h  ChooseTransitionRandomly.cc  ChooseTransitionRandomly.h  ComputeBoundExploration.cc  ComputeBoundExploration.h  DFSExploration.cc  DFSExploration.h  DFSStackEntry.cc  DFSStackEntry.h  DeadlockExploration.cc  DeadlockExploration.h  Firelist.cc  Firelist.h  FirelistStubbornComputeBound.cc  FirelistStubbornComputeBound.h  FirelistStubbornDeadlock.cc  FirelistStubbornDeadlock.h  FirelistStubbornDeletion.cc  FirelistStubbornDeletion.h  FirelistStubbornLTL.cc  FirelistStubbornLTL.h  FirelistStubbornStatePredicate.cc  FirelistStubbornStatePredicate.h  FirelistStubbornTsccAlwaysUpset.cc  FirelistStubbornTsccAlwaysUpset.h  FirelistStubbornTsccUpset.cc  FirelistStubbornTsccUpset.h  LTLExploration.cc  LTLExploration.h  LTLStack.h  ParallelExploration.cc  ParallelExploration.h  SearchStack.h  SimpleProperty.h  (+5 more)
dependencies/lola/src/Formula/: FormulaInfo.cc  FormulaInfo.h
dependencies/lola/src/InputOutput/: CompressedIO.cc  CompressedIO.h  InputOutput.cc  InputOutput.h  JSON.cc  JSON.h  Reporter.cc  Reporter.h  SimpleString.cc  Socket.cc  Socket.h  vasprintf.c  vasprintf.h
dependencies/lola/src/Net/: LinearAlgebra.cc  LinearAlgebra.h  Marking.cc  Marking.h  Net.cc  Net.h  NetState.cc  NetState.h  Place.cc  Place.h  Transition.cc  Transition.h
dependencies/lola/src/Planning/: AGEFAGTask.h  AGEFTask.cc  AGEFTask.h  BooleanTask.h  CTLTask.cc  CTLTask.h  CompoundTask.cc  CompoundTask.h  ComputeBoundTask.cc  ComputeBoundTask.h  ConjunctionTask.cc  ConjunctionTask.h  DeadlockFindpathTask.cc  DeadlockFindpathTask.h  DeadlockSearchTask.cc  DeadlockSearchTask.h  DeadlockTask.h  DisjunctionTask.cc  DisjunctionTask.h  EFAGEFTask.cc  EFAGEFTask.h  EFAGTask.h  EmptyTask.h  FullTask.cc  FullTask.h  InitialTask.cc  InitialTask.h  InvariantTask.h  LTLTask.cc  LTLTask.h  LeafTask.cc  LeafTask.h  NoDeadlockTask.h  ParallelTask.cc  ParallelTask.h  ReachabilityFindpathTask.cc  ReachabilityFindpathTask.h  ReachabilitySearchTask.cc  ReachabilitySearchTask.h  ReachabilityTask.h  (+8 more)
dependencies/lola/src/Siphon/: lola2minisat.cc  lola2minisat.h
dependencies/lola/src/Stores/: CompareStore.h  CompareStore.inc  CycleStore.h  EmptyStore.h  PluginStore.h  PluginStore.inc  Store.h  Store.inc  SymmetryStore.h
dependencies/lola/src/SweepLine/: Sweep.h  Sweep.inc  SweepEmptyStore.cc  SweepEmptyStore.h  SweepListStore.h  SweepListStore.inc  SweepRingStore.h  SweepRingStore.inc
dependencies/lola/src/Symmetry/: AutomorphismGraph.cc  AutomorphismGraph.h  Constraints.cc  Constraints.h  Symmetry.cc  Symmetry.h
dependencies/lola/src/Witness/: Condition.cc  Event.cc  (+4 more)
dependencies/lola/tests/: Makefile  Makefile.am  Makefile.in  atconfig  cover.sh  cover.sh.in  package.m4  package.m4.in  testsuite.at  wrap.sh
dependencies/lola/utils/: Makefile  Makefile.am  Makefile.in  groundhog  killer  listener
dependencies/mist/: AUTHORS  ChangeLog  Makefile  Makefile.in  README  README.md  aclocal.m4  autogen.sh  config.status  configure  configure.ac
dependencies/mist/autom4te.cache/: output.1  requests  traces.0  traces.1
dependencies/mist/regression-tests/: README  correct_petri_net.spec  invariant_limited_twice.spec  limited_twice.spec  limited_twice_v2.spec  not_petri_net.spec  target_limited_twice.spec
dependencies/mist/scripts/: README.md  generate_graphs.sh  run_benchmarks.py
dependencies/mist/src/: Makefile  Makefile.am  Makefile.in  abstraction.c  abstraction.h  basis.c  basis.h  checkup.c  checkup.h  codegengoals.c  codegengoals.h  codegeninit.c  codegeninit.h  codegeninvar.c  codegeninvar.h  codegenrules.c  codegenrules.h  complement.c  complement.h  computesim.c  computesim.h  config.h  config.h.in  debug.c  debug.h  def.h  determinize.c  determinize.h  draw.c  draw.h  error.c  error.h  father_mangmt.c  father_mangmt.h  interval.c  interval.h  ist.h  laparser.h  lexer.c  lexer.l  (+35 more)
(+79665 files in other folders)
