DEFS=@DEFS@ -DTRANSFER
AM_CPPFLAGS=-I.
BUILT_SOURCES = parser.h
AM_YFLAGS = -d
bin_PROGRAMS = mist
mist_SOURCES = \
	abstraction.c \
	abstraction.h \
	basis.c \
	basis.h \
	checkup.c \
	checkup.h \
	codegengoals.c \
	codegengoals.h \
	codegeninit.c \
	codegeninit.h \
	codegeninvar.c \
	codegeninvar.h \
	codegenrules.c \
	codegenrules.h \
	complement.c \
	complement.h \
	computesim.c \
	computesim.h \
	debug.c \
	debug.h \
	def.h \
	determinize.c \
	determinize.h \
	error.c \
	error.h \
	father_mangmt.c \
	father_mangmt.h \
	interval.c \
	interval.h \
	ist.h \
	draw.c \
	draw.h \
	laparser.h \
	lexer.l \
	list_ist.c \
	list_ist.h \
	listnode.c \
	listnode.h \
	minimize.c \
	minimize.h \
	minimizeinvarexact.c \
	minimizeinvarexact.h \
	minimizeinvarheuristic.c \
	minimizeinvarheuristic.h \
	mist.c \
	normalize.c \
	normalize.h \
	parser.y \
	parser.h \
	predtrans.c \
	predtrans.h \
	proc.c \
	proc.h \
	remove.c \
	remove.h \
	tbsymbol.c \
	tbsymbol.h \
	tbsymbolinfo.c \
	tbsymbolinfo.h \
	transsystem.c \
	transsystem.h \
	tree.c \
	tree.h \
	typechecking.h \
	typechecking.c \
	xmalloc.c \
	xmalloc.h
